--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -10,7 +10,9 @@
     <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-sdk android:minSdkVersion="19" android:targetSdkVersion="19" />
 
+    <!-- Change debuggable to false before signing APK -->
     <application
+        android:debuggable="true"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
