--- a/build.gradle
+++ b/build.gradle
@@ -1,33 +1,42 @@
 buildscript {
     repositories {
-        mavenCentral()
+        jcenter()
     }
     dependencies {
-        classpath  'com.android.tools.build:gradle:0.12.+'
+        classpath 'com.android.tools.build:gradle:1.3.1'
     }
 }
 apply plugin: 'com.android.application'
 
 repositories {
-    mavenCentral()
+    jcenter()
 }
 
 android {
-    compileSdkVersion 19
-    buildToolsVersion "19.1"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.1"
 
     defaultConfig {
         minSdkVersion 19
-        targetSdkVersion 19
-        versionCode 1
-        versionName "1.0"
+        targetSdkVersion 23
+        versionCode 2
+        versionName "2.0"
     }
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
     }
+
+    packagingOptions {
+        // The magnetictrackparser dependency is pulling in multiple jars
+        // that have these identical file names.  Android, unfortunately, won't
+        // let me create the APK file without excluding them.
+        exclude 'META-INF/INDEX.LIST'
+        exclude 'META-INF/LICENSE.txt'
+    }
 }
 
 dependencies {
+    compile 'us.fatehi:magnetictrackparser:1.8'
 }
